# json_inspector

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  build.bat  docker-compose.yml  pyproject.toml  requirements.txt  run.py
json_inspector/: __main__.py  about_dialog.py  edit_dialog.py  edit_value_dialog.py  gui.py  helper.py  load_children_worker.py  manager.py  monitor.py  save_inspect_gui.py  search.py  search_worker.py  settings.py  settings_dialog.py  signals.py  vars.py
tests/: conftest.py  json_manager_test.py
tests/fixtures/: bad_json_syntax.json
