[tool.briefcase]
project_name = "Json Inspector"
version = "0.1.0"
package = "nl.scarlettbytes.json_inspector"
bundle = "nl.scarlettbytes.json_inspector"
author = "Scarlett Samantha Verheul"
author_email = "scarlett.verheul@gmail.com"

[tool.briefcase.app.json_inspector.windows]
use_full_install_path = false

[tool.briefcase.app.json_inspector]
formal_name = "Json inspector"
description = "A tool to inspect and edit JSON files."
long_description = "A tool to inspect and edit JSON files, providing a user-friendly interface for viewing and modifying JSON data. with a easy to use interface."
sources = ["json_inspector"]
bundle = "nl.scarlettbytes.json_inspector"
entry_point = "main:main"
license.file = "LICENSE"
requires = [
  "ujson",
  "PyQt6"
]
assets = [
  "assets",
  "exceptions",
  "gameplay",
  "helpers",
  "i18n",
  "managers",
  "menus",
  "mixins",
  "system",
  "world",
  "assets",
  "saves",
  "libs",
]

[tool.poetry]
authors = ["Scarlett Samantha Verheul <scarlett.verheul@gmail.com>"]
dependencies.python = "^3.13"
description = "A tool to inspect and edit JSON files."
license = "GNU General Public License v3 (GPLv3)"
name = "json_inspector"

[tool.ruff]
ignore = ["E501", "F841", "E721", "E402"]
line-length = 120
select = ["E", "W", "F"]
exclude = ["**/stubs", "**/.pyenv", "**/site-packages", "**/*.pyi"]

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "**/stubs",
  "**/site-packages",
  "**/*.pyi",
]
stubPath = "./typings"
pythonPlatform = "Linux"

[tool.bandit]
skips = ["B311", "B301", "B101", "B403"]

[tool.pymarkdownlnt]
log.level = "INFO"
log.stack-trace = true
rules = ["MD013"]
